# iron_verdict

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  SECURITY.md  TASK16_TESTING_RESULTS.md  TASKS_13-16_COMPLETION_REPORT.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.py
.claude/: CLAUDE.md  settings.local.json
docs/: CLOCK_TIMER_REQUIREMENTS.md  PERSONAS.md  PROJECT_OVERVIEW.md  REQUIREMENTS.md  TESTING.md  USER_FLOWS.md  USE_CASES.md  deployment.md  e2e-known-risks.md  planned_improvements.md
docs/design_ideas/: design-dimensional.md  example-dimensional.html  frontend_prompt.md
docs/plans/: 2026-01-31-judgeme-implementation.md  2026-01-31-live-judging-design.md  2026-02-03-navigation-timer-improvements-design.md  2026-02-03-navigation-timer.md  2026-02-05-demo-mode-design.md  2026-02-05-demo-mode-implementation.md  2026-02-05-frontend-implementation.md  2026-02-05-frontend-redesign-design.md  2026-02-05-frontend-redesign-implementation.md  2026-02-10-card-reason-display-design.md  2026-02-10-card-reason-display-implementation.md  2026-02-11-session-name-design.md  2026-02-11-session-name-implementation.md  2026-02-12-security-batch-a.md  2026-02-18-batch-c-abuse-prevention.md  2026-02-19-timer-sync-fix-design.md  2026-02-19-timer-sync-fix.md  2026-02-20-rename-to-iron-verdict-design.md  2026-02-20-rename-to-iron-verdict.md  2026-02-21-judge-reason-selection-design.md  2026-02-21-judge-reason-selection.md  2026-02-24-p2-connection-id-design.md  2026-02-24-p2-connection-id.md  2026-02-25-fix-orb-spacing-design.md  2026-02-25-fix-orb-spacing.md  2026-02-25-frontend-cleanup-design.md  2026-02-25-frontend-cleanup-plan.md  2026-02-26-display-screen-visibility-design.md  2026-02-26-display-screen-visibility.md  2026-02-26-judge-screen-orb-size-design.md  2026-02-26-judge-screen-orb-size.md  2026-02-26-navigation-reload-qr-design.md  2026-02-26-navigation-reload-qr.md  2026-02-26-server-restart-ux.md  2026-02-27-judge-reconnect-robustness-design.md  2026-02-27-judge-reconnect-robustness.md  2026-03-01-fix-double-vote-after-reload.md  2026-03-02-frontend-e2e-testing-design.md  2026-03-02-frontend-e2e-testing.md  2026-03-03-require-all-three-votes-design.md  (+5 more)
mvp/docs/: MVP_API.md  MVP_DATABASE_SCHEMA.md  MVP_PRD.md  MVP_REQUIREMENTS.md  MVP_USER_FLOWS.md  MVP_USE_CASES.md
src/iron_verdict/: config.py  (+4 more)
tests/: test_connection.py  test_logging_config.py  test_main.py  test_manual_verification.py  test_session.py
(+46 files in other folders)
