[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iron-verdict"
version = "0.1.0-beta"
description = "Powerlifting competition judging application"
authors = [{name = "Alex", email = "iron.verdict.judging@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "slowapi==0.1.9",
]

[project.urls]
Repository = "https://github.com/abti247/iron_verdict"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "httpx-ws>=0.6.0",
]

[tool.setuptools.package-data]
iron_verdict = ["static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
